fixing contrast

--- a/css/main.css
+++ b/css/main.css
@@ -60,7 +60,7 @@ ul.skills-ul {
 }
 
 #skills h4 {
-    color: var(--hex2);
+    color: rgba(26, 34, 56, 0.8);
     padding: 0.6em 0;
     text-align: center;
 }
